-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added some antidote to priests' inventories
  * Stairs and portals flash in look mode
  * Reduced magical whistle's recharging time from 75 to 60 min,
    because the latter is easier to remember
  * Fixed a certain bug caused by the addition of willpower
  * Fixed a memory leak in the scar code
  * Golems' AGI, DEX and STRs are no longer affected by scars

April 2 2005 Timo & Heikki

  * Scars

March 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * You now hear coins clinking inside imperialists
  * Made some additional preparations for willpower and hiccups

March 4 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Mind worms had somehow disappeared from char.pcx; they've been added
    again
  * The order of priests' limb attachment and leprosy curing services
    has been reversed
  * Bananas can now jam
  * The Holy Hand Grenade, chastity belt, pear of anguish, weight
    (for use with spanish donkey) added to item.pcx by Kahvi
  * Judas chair, rotating drum, witch's spider, rack, wheel, logs for
    hammering prior to wheel use, spanish donkey, spanish boot, iron maiden
    (open and close) added to olterra.pcx by Kahvi
  * Big T added as a 'being Tortured' symbol to symbol.pcx by Kahvi

March 4 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * forgot a small test in the script. Now deleted.
  * AUTHORS file now updated
  * small bug fixes included

March 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Ighalli's god changed integrated. AUTHORS file may need tweaking in the future.

March 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
