@@ -1023,7 +1023,9 @@ class character : public entity, public id
   virtual const char* GetNormalDeathMessage() const;
   virtual bool IsConscious() const;
   void ForcePutNear(v2);
-  virtual void ApplySpecialAttributeBonuses() {}
+  virtual void ApplySpecialAttributeBonuses() { }
+  void ReceiveMustardGas(int, long);
+  void ReceiveMustardGasLiquid(int, long);
  protected:
   static truth DamageTypeDestroysBodyPart(int);
   virtual void LoadSquaresUnder();
