@@ -82,6 +82,7 @@
 #define ENERGY 32
 #define POISON 64
 #define DRAIN 128
+#define MUSTARD_GAS_DAMAGE 256
 #define THROW 32768
 
 #define UNDEFINED 0
@@ -904,6 +905,7 @@
 #define CAN_DISSOLVE 4
 #define AFFECT_INSIDE 8
 #define EFFECT_IS_GOOD 16
+#define IS_AFFECTED_BY_MUSTARD_GAS 32
 
 /*************************/
 /* End of DataBase flags */
